--- a/mobile/android/settings.gradle
+++ b/mobile/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'BahaiBrasil'
 
 include ':app'
+
+// CUSTOM
+include ':RCTYouTube', ':app'
+project(':RCTYouTube').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-youtube/android')
