--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "human-date": "^1.4.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-vector-icons": "^4.0.1"
