--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -94,10 +94,20 @@ android {
         applicationId "com.bahaibrasil"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
+        versionCode 10
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
+        }
+    }
+    signingConfigs { // CUSTOM
+        release {
+            if (project.hasProperty('BAHAI_BRASIL_RELEASE_STORE_FILE')) {
+                storeFile file(BAHAI_BRASIL_RELEASE_STORE_FILE)
+                storePassword BAHAI_BRASIL_RELEASE_STORE_PASSWORD
+                keyAlias BAHAI_BRASIL_RELEASE_KEY_ALIAS
+                keyPassword BAHAI_BRASIL_RELEASE_KEY_PASSWORD
+            }
         }
     }
     splits {
@@ -112,6 +122,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release // CUSTOM
         }
     }
     // applicationVariants are e.g. debug, release
@@ -135,7 +146,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
 
     // CUSTOM
-    compile project(':RCTYouTube')     // From node_modules
+    compile project(':RCTYouTube')
 }
 
 // Run this once to be able to run the application with BUCK
