--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -91,7 +91,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.bahaibrasil"
+        applicationId "com.bahai.brasil"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 10
