Initial configuration of ReactNativeFCM

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "human-date": "^1.4.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
+    "react-native-fcm": "^6.2.3",
     "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
@@ -22,6 +23,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["./fonts"]
+    "assets": [
+      "./fonts"
+    ]
   }
 }
