--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fcm')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
@@ -148,6 +149,7 @@ dependencies {
 
     // CUSTOM
     compile project(':RCTYouTube')
+    compile 'com.google.firebase:firebase-core:10.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -156,3 +158,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+// CUSTOM
+apply plugin: 'com.google.gms.google-services'
