Preparing app to iOS + minor changes

--- a/mobile/ios/BahaiBrasil/Info.plist
+++ b/mobile/ios/BahaiBrasil/Info.plist
@@ -71,6 +71,8 @@
       <string>SimpleLineIcons.ttf</string>
       <string>Zocial.ttf</string>
       <string>colwell_a.ttf</string>
+      <string>Breeserif.ttf</string>
+      <string>bree.ttf</string>
     </array>
   </dict>
 </plist>
