--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-fcm": "^6.2.3",
-    "react-native-vector-icons": "^4.0.1"
+    "react-native-vector-icons": "^4.0.1",
+    "react-native-version-number": "^0.1.2"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
