--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-fcm": "^6.2.3",
+    "react-native-gallery": "0.0.17",
     "react-native-vector-icons": "^4.0.1",
     "react-native-version-number": "^0.1.2"
   },
