Adjusting ShowMore button in iOS

--- a/mobile/ios/BahaiBrasil.xcodeproj/xcshareddata/xcschemes/BahaiBrasil.xcscheme
+++ b/mobile/ios/BahaiBrasil.xcodeproj/xcshareddata/xcschemes/BahaiBrasil.xcscheme
@@ -124,6 +124,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Bah&#xe1;&apos;&#xed; Brasil"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
