Adding ths staging environment

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,13 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-production:
+production: &production
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
   url: <%= ENV['DATABASE_URL'] %>
+
+staging:
+  <<: *production
