--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-ga": "^2.3.5",
     "react-markdown": "^2.5.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -15,7 +16,11 @@
     "webpack-dev-server": "^2.8.2"
   },
   "buildpacks": [
-    { "url": "heroku/nodejs" },
-    { "url": "heroku/ruby" }
+    {
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "heroku/ruby"
+    }
   ]
 }
