--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-youtube": "^7.5.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
