--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-custom-markdown": "^1.0.10",
     "react-dom": "^15.6.1",
     "react-ga": "^2.3.5",
     "react-markdown": "^2.5.0",
+    "react-quick-styles": "^1.0.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
